--- a/Programski_kod/Frontend/Views/Shared/_Layout.cshtml
+++ b/Programski_kod/Frontend/Views/Shared/_Layout.cshtml
@@ -1,8 +1,15 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="hr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Filip Jakovina" />
+    <meta name="keywords" content="natjecanje, natjecatelj, igrač, tim"/>
+    <meta name="description" content="Prikaz i filtriranje skupa podataka Sportska natjecanja" />
+    <meta name="published" content="14.11.2023." />
+    <meta name="version" content="2.0" />
+    <meta name="dateformat" content="ISO 8601" />
+    <meta name="license" content="Creative Commons - CC0 1.0 Universal" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
