--- a/Programski_kod/Frontend/Views/Home/Datatable.cshtml
+++ b/Programski_kod/Frontend/Views/Home/Datatable.cshtml
@@ -1,4 +1,8 @@
-﻿@model List<ClassLibrary.NatjecanjeDto>
+﻿@{
+    ViewData["Title"] = "Sportska natjecanja";
+}
+
+@model List<ClassLibrary.NatjecanjeDto>
 
 <h1>Sportska natjecanja</h1>
 
@@ -31,7 +35,7 @@
 <a id="csvLink" class="btn btn-primary" href="https://localhost:7223/api/data/csv">Preuzmi CSV</a>
 <a id="jsonLink" class="btn btn-primary" href="https://localhost:7223/api/data/json">Preuzmi Json</a>
 
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>Naziv</th>
@@ -61,7 +65,7 @@
             <tr>
                 <td colspan="8">
                     <div class="details full-width" style="display: none;">
-                        <table class="table">
+                        <table class="table table-hover">
                             @if (natjecanje.Igraci == null)
                             {
                                 <thead>
