--- a/Programski_kod/Frontend/Views/Home/Index.cshtml
+++ b/Programski_kod/Frontend/Views/Home/Index.cshtml
@@ -8,13 +8,13 @@
 
 <h2>Preuzmi CSV datoteku</h2>
 
-<a class="btn btn-primary" href="https://localhost:7223/api/data/csv">Preuzmi CSV</a>
+<a class="btn btn-primary" asp-controller="Home" asp-action="DownloadCsv">Preuzmi CSV</a>
 
 <hr />
 
 <h2>Preuzmi Json datoteku</h2>
 
-<a class="btn btn-primary" href="https://localhost:7223/api/data/json">Preuzmi Json</a>
+<a class="btn btn-primary" asp-controller="Home" asp-action="DownloadJson">Preuzmi Json</a>
 
 <hr />
 
